# Algorithm-DXZ

./: CMakeLists.txt  README.md
include/: DancingLinks.h  ZDD.h
src/: DLXZ.cpp  DXZ.cpp  main.cpp
test/: test.cpp  testHash.cpp  testMatrix.cpp
